Update local import map

--- a/root-config/src/index.ejs
+++ b/root-config/src/index.ejs
@@ -47,8 +47,11 @@
   <script type="systemjs-importmap">
     {
       "imports": {
-        "@single-spa/welcome": "https://unpkg.com/single-spa-welcome/dist/single-spa-welcome.js",
-        "@example/root-config": "//localhost:9000/example-root-config.js"
+        "@example/root-config": "http://localhost:9000/example-root-config.js",
+        "@example/navbar": "http://localhost:5000/example-navbar.js",
+        "@example/home": "http://localhost:5001/example-home.js",
+        "@example/login": "http://localhost:5002/example-login.js",
+        "@example/auth": "http://localhost:9001/example-auth.js"
       }
     }
   </script>
