Add rxjs to import map

--- a/root-config/src/index.ejs
+++ b/root-config/src/index.ejs
@@ -22,7 +22,9 @@
       "imports": {
         "single-spa": "https://cdn.jsdelivr.net/npm/single-spa@5.8.0/lib/system/single-spa.min.js",
         "react": "https://cdn.jsdelivr.net/npm/react@16.13.1/umd/react.production.min.js",
-        "react-dom": "https://cdn.jsdelivr.net/npm/react-dom@16.13.1/umd/react-dom.production.min.js"
+        "react-dom": "https://cdn.jsdelivr.net/npm/react-dom@16.13.1/umd/react-dom.production.min.js",
+        "rxjs": "https://unpkg.com/@esm-bundle/rxjs/esm/es5/rxjs.min.js",
+        "rxjs/operators": "https://unpkg.com/@esm-bundle/rxjs/esm/es5/rxjs-operators.min.js"
       }
     }
   </script>
